--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ FCNN-Pytorch/dataset/*
 GAN-Pytorch/dataset/*
 GAN-Pytorch/SimpleGAN/runs/*
 GAN-Pytorch/DeepConvGAN/runs/*
+GAN-Pytorch/DeepConvGAN/runs_gs1/*
+GAN-Pytorch/DeepConvGAN/runs_gs2/*
+
